--- a/glfw/docs/input.dox
+++ b/glfw/docs/input.dox
@@ -286,7 +286,7 @@ mouse motion input.  By default, the cursor mode is `GLFW_CURSOR_NORMAL`,
 meaning the regular arrow cursor (or another cursor set with @ref glfwSetCursor)
 is used and cursor motion is not limited.
 
-If you wish to implement mouse motion based camera controls or other input
+If you wish to implement mouse motion based Camera controls or other input
 schemes that require unlimited mouse movement, set the cursor mode to
 `GLFW_CURSOR_DISABLED`.
 
@@ -341,7 +341,7 @@ be enabled if available.
 Raw mouse motion is closer to the actual motion of the mouse across a surface.
 It is not affected by the scaling and acceleration applied to the motion of the
 desktop cursor.  That processing is suitable for a cursor while raw motion is
-better for controlling for example a 3D camera.  Because of this, raw mouse
+better for controlling for example a 3D Camera.  Because of this, raw mouse
 motion is only provided when the cursor is disabled.
 
 Call @ref glfwRawMouseMotionSupported to check if the current machine provides
